--- a/css/main.css
+++ b/css/main.css
@@ -95,10 +95,27 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
+/*Font Import*/
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800);
+
+h1 {
+    font-family: 'OpenSans';
+    font-weight: 800;
+}
+
+p {
+   font-family: 'OpenSans';
+   font-weight: 400; 
+}
 
 
+/*layout and placement*/
 
-
+.center {
+    width: 50%;
+    margin-left: auto;
+    margin-right: auto;
+}
 
 
 
