--- a/css/main.css
+++ b/css/main.css
@@ -208,7 +208,7 @@ p {
    Modify as content requires.
    ========================================================================== */
 
-@media only screen and (min-width: 35em) {
+/*@media only screen and (min-width: 35em) {
     /* Style adjustments for viewports that meet the condition */
 }
 
@@ -217,7 +217,7 @@ p {
        (min-resolution: 120dpi) {
     /* Style adjustments for high resolution devices */
 }
-
+*/
 /* ==========================================================================
    Print styles.
    Inlined to avoid the additional HTTP request:
