--- a/css/main.css
+++ b/css/main.css
@@ -117,6 +117,18 @@ p {
     margin-right: auto;
 }
 
+@media only screen and (min-device-width : 320px) and (max-device-width : 568px){
+    h1 {
+            font-family: 'OpenSans';
+            font-weight: 800;
+            }
+
+    p {
+        font-family: 'OpenSans';
+        font-weight: 400; 
+        }
+
+}
 
 
 
