--- a/page/main.css
+++ b/page/main.css
@@ -306,7 +306,7 @@ section{
     width:100%;
     height: 400px; 
 	background-image: url(Header-01.png);
-    font-family: calibre;
+    font-family: 'open sans';
     font-style: light;
     font-size: 60px;
     color: #133a61;
